--- a/WannaCry-Hunter/WannaCry-Hunter/Form1.resx
+++ b/WannaCry-Hunter/WannaCry-Hunter/Form1.resx
@@ -762,7 +762,7 @@ Developed by AlMA PRO LEADER http://fb.com/a.p.ldr.official
 
 This program is free &amp; OpenSource, DO NOT pay for it nor sell it or use it in bad manners!
 
-Creatings to all Libyan Hackers.
+Greetings to all Libyan Hackers.
 
 A.R.M-Y H4CK3RZ http://fb.com/A.R.M.Libya</value>
   </data>
